# xdbc-server

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  chcsv.cpp  config_reader.cpp  config_reader.h  customQueue.h  docker-xdbc.yml  main.cpp  metrics_calculator.h  pg.cpp  pgserver.cpp  pgserver.h  xdbc_c_api.cpp  xdbc_c_api.h  xdbcserver.cpp  xdbcserver.h
.devcontainer/: devcontainer.json
Compression/: Compressor.cpp  Compressor.h
ControllerInterface/: WebSocketClient.cpp  WebSocketClient.h
DataSources/: DataSource.cpp  DataSource.h  PGReader.cpp  PGReader.h  deserializers_parquet.h
DataSources/CHReader/: CHReader.cpp  CHReader.h
DataSources/CSVReader/: CSVReader.cpp  CSVReader.h  deserializers_arrow.h
DataSources/PGInternalReader/: PGInternalReader.cpp  PGInternalReader.h
DataSources/PGReader/: PGReader.cpp  PGReader.h  queue.h
DataSources/PQReader/: PQReader.cpp  PQReader.h
DataSources/SPIReader/: SPIReader.cpp  SPIReader.h
EnvironmentReconfigure/: EnvironmentManager.cpp  EnvironmentManager.h
docker/: Dockerfile  Makefile
experiments/: build_and_start.sh
plots/: compression_runs.csv  experiments_compression_network.py  test.py
